# linux-discord-rpc

./: CHANGELOG.md  README.md  linux-discord-rpc.py  linux-discord-rpc.service  pyproject.toml  rpc-cli
linux_discord_rpc/: __init__.py  __main__.py  cli.py  config.py  daemon.py  optgen.py  procs.py
