[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "linux_discord_rpc"
version = "2.2"
authors = [
  { name="Xarblu", email="xarblu@protonmail.com" },
]
description = "Custom Discord Rich Presence for Linux"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "psutil",
    "pypresence",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
]

[project.scripts]
rpc-daemon = "linux_discord_rpc.__main__:run_daemon"
rpc-cli = "linux_discord_rpc.__main__:run_cli"

[tool.hatch.build]
only-packages = true

[project.urls]
"Homepage" = "https://github.com/xarblu/linux-discord-rpc"
"Bug Tracker" = "https://github.com/xarblu/linux-discord-rpc/issues"
